# storePose

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  annotate.sh  build-web.sh  busy_report.py  cvat-annotate.sh  main.py  pyproject.toml  video-run.sh  view-setup.sh  waits.csv
docs/: annotation-cvat.md  problem-definition.md  tracking-id-switches.md  usage.md
scripts/: chunk_video.py
src/storepose/: config.py  detector.py  drawing.py  faces.py  fps.py  launcher.py  launcher_core.py  model_zoo.py  pipeline.py  pose.py  runner.py  video_sink.py  video_source.py
tests/: _preview_dashboard.py  test_config.py  test_detector.py  test_drawing.py  test_faces.py  test_fps.py  test_io.py  test_launcher.py  test_launcher_core.py  test_pipeline.py  test_runner_debug.py
tests/busy/: test_aggregator.py  test_calibrate.py  test_occupancy.py  test_report.py
tests/dashboard/: test_metrics.py  test_panel.py  test_server.py  test_server_stream.py  test_state.py  test_stream.py  test_stream_payload.py
tests/eval/: test_cvat_cli.py  test_cvat_export.py  test_cvat_import.py  test_labeling.py  test_metrics.py  test_occupancy_eval.py
tests/queue/: test_analyzer.py  test_outliers.py  test_types_pos.py  test_zone.py
tests/scene/: test_cache.py  test_depthpro.py  test_geometry.py
tests/tracking/: test_appearance.py  test_assignment.py  test_kalman.py  test_osnet.py  test_smoothing.py  test_track.py  test_tracker.py  test_types.py
viewscripts/: cvat-annotate.sh
web/: README.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CashierMultiplier.tsx  Charts.tsx  DebugTable.tsx  Header.tsx  Histogram.tsx  LiveFeed.tsx  (+4 more)
(+83 files in other folders)
