[project]
name = "storepose"
version = "0.1.0"
description = "Realtime multi-person bounding-box + RTMPose skeleton overlay"
requires-python = ">=3.12,<3.13"
dependencies = [
    "rtmlib>=0.0.13",
    "onnxruntime>=1.17",
    "opencv-python>=4.9",
    "numpy>=1.26,<2.3",
]

[project.scripts]
storepose = "storepose.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storepose"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
