[project]
name = "storepose"
version = "0.1.0"
description = "Realtime multi-person bounding-box + RTMPose skeleton overlay"
requires-python = ">=3.12,<3.13"
dependencies = [
    "rtmlib>=0.0.13",
    "onnxruntime>=1.17",
    "opencv-python>=4.9",
    "numpy>=1.26,<2",
    "scipy>=1.11",
    # Depth is foundational: Depth Pro is a required scene-calibration gate
    # (runs once per camera, cached). Inference runs on CPU (OOM-kills on MPS).
    "torch>=2.2",
    "torchvision>=0.17",
    "depth-pro @ git+https://github.com/apple/ml-depth-pro.git",
]

[project.scripts]
storepose = "storepose.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# depth-pro is pulled from a git URL (Apple ml-depth-pro); hatchling requires
# this opt-in to allow direct references in project.dependencies.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/storepose"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
